<!-- //Authors : Jordan Chabrier, Arthur Décamp, Ludwig Raepsaet, Nicolas Sagnette, Clément Saubagnac -->
<!-- //2014 -->

<!-- // LICENCE -->
<!-- //This file is part of Syllabes. -->
<!-- // -->
<!-- //    Syllabes is free software: you can redistribute it and/or modify -->
<!-- //    it under the terms of the GNU General Public License as published by -->
<!-- //    the Free Software Foundation, either version 3 of the License, or -->
<!-- //    (at your option) any later version. -->
<!-- // -->
<!-- //    Syllabes is distributed in the hope that it will be useful, -->
<!-- //    but WITHOUT ANY WARRANTY; without even the implied warranty of -->
<!-- //    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the -->
<!-- //    GNU General Public License for more details. -->
<!-- // -->
<!-- //    You should have received a copy of the GNU General Public License -->
<!-- //    along with Syllabes.  If not, see <http://www.gnu.org/licenses/>. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/logo_grand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titre_credits"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/equipe"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/formation"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lieu"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/professeurs"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/apropos1"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/licence"
        android:textSize="12sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/annee"
        android:textSize="12sp" />

    <Button
        android:id="@+id/credits_return"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button_quit" />

</LinearLayout>